--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
                 <div class="w-8 h-8 sm:w-10 sm:h-10 flex items-center justify-center">
                     <img src="/LogoApp.jpeg" alt="Fleur Logo" class="w-8 h-8 sm:w-10 sm:h-10 object-cover rounded-lg">
                 </div>
-                <h1 class="text-lg sm:text-xl font-bold hidden sm:block text-white">Fleur Atelier d'artistes</h1>
+                <h1 class="text-lg sm:text-xl font-bold hidden sm:block text-white">FLEUR CAFÉ - Atelier d'artistes</h1>
                 <h1 class="text-base font-bold sm:hidden text-white">Fleur Atelier</h1>
             </div>
 
